removed code coverage by Jacoco + updated versions of dependencies and plugins