@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.9.2</version>
+            <version>2.10.1</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.windowlicker</groupId>
@@ -39,19 +39,19 @@
         <dependency>
             <groupId>org.objenesis</groupId>
             <artifactId>objenesis</artifactId>
-            <version>1.0</version>
+            <version>1.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.specs2</groupId>
-            <artifactId>specs2_2.9.2</artifactId>
-            <version>1.12</version>
+            <artifactId>specs2_2.10</artifactId>
+            <version>1.14</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit-dep</artifactId>
-            <version>4.10</version>
+            <version>4.11</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.hamcrest</groupId>
@@ -80,7 +80,7 @@
             <plugins>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.5.1</version>
+                    <version>3.0</version>
                     <executions>
                         <execution>
                             <id>default-compile</id>
@@ -95,19 +95,16 @@
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
                     <artifactId>scala-maven-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <version>3.1.3</version>
                     <configuration>
-                        <args>
-                            <arg>-unchecked</arg>
-                            <arg>-deprecation</arg>
-                            <arg>-explaintypes</arg>
-                        </args>
                         <charset>${project.build.sourceEncoding}</charset>
                         <jvmArgs>
                             <jvmArg>-server</jvmArg>
                             <jvmArg>-Xms512m</jvmArg>
                             <jvmArg>-Xmx512m</jvmArg>
                             <jvmArg>-Xss1m</jvmArg>
+                            <jvmArg>-XX:PermSize=128m</jvmArg>
+                            <jvmArg>-XX:MaxPermSize=128m</jvmArg>
                             <jvmArg>-XX:+TieredCompilation</jvmArg>
                         </jvmArgs>
                     </configuration>
@@ -129,7 +126,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.12</version>
+                    <version>2.14</version>
                     <configuration>
                         <runOrder>hourly</runOrder>
                         <includes>
@@ -139,7 +136,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>2.3</version>
+                    <version>2.4</version>
                     <executions>
                         <execution>
                             <id>package-jar-with-dependencies</id>
@@ -160,25 +157,6 @@
                         </execution>
                     </executions>
                 </plugin>
-                <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.5.8.201207111220</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>prepare-agent</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>report</id>
-                            <phase>prepare-package</phase>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
@@ -188,10 +166,6 @@
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
